// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profile /> with enzyme matches snapshot 1`] = `
<Profile
  name="beomyeon"
  username="Andrea"
>
  <div>
    <b>
      Andrea
      !
    </b>
     
    <span>
      (
      beomyeon
      )
    </span>
  </div>
</Profile>
`;

exports[`<Profile /> with react-testing-library matches snapshot 1`] = `
<div>
  <div>
    <b>
      Andrea
      !
    </b>
     
    <span>
      (
      beomyeon
      )
    </span>
  </div>
</div>
`;
